feat: added final tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "outDir": "dist"
   },
   "include": [
-    "scripts/**/*.ts"
+    "web-app/scripts/**/*.ts"
   ],
   "ts-node": {
     "esm": true
