added new contract

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,18 @@
-# RPC URLs
-ARB_RPC_URL=###
-BASE_RPC_URL=###
-ETH_RPC_URL=###
+ARB_RPC_URL=##
+BASE_RPC_URL=##
 
 
-ARB_RELAYER=###
-BASE_RELAYER=###
-ETH_RELAYER=###
+ARB_RELAYER_PK=###
+BASE_RELAYER_PK=###
+
 
 # Arbitrum Contracts
-CALLBREAKER_ARB=###
-USDC_ARB=###
-ARB_POST_APPROVE=###
+CALLBREAKER_ARB=0x7f71a9c6b157aa17501cb30b36c3d1affe7059cc
+USDC_ARB=0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d
+
 
 # Base Contracts
-BASE_DEPOSIT_ESCROW=###
+# BASE_DEPOSIT_ESCROW=0x0737c4a886b8898718881fd4e2fe9141abec1244  # Old escrow (stuck funds)
+IMPROVED_ESCROW_BASE=###  # New working escrow
 USDC_BASE=###
 VAULT_BASE=###
-
-# Ethereum Sepolia Contracts
-USDC_ETH=###
-ETH_DEPOSIT_ESCROW=###
-CALLBREAKER_ETH=###
