Organize project structure and update .gitignore
- Move all .mjs scripts to scripts/ folder
- Update .gitignore to exclude sensitive files
- Add Next.js and build output exclusions
- Organize deployment and testing files

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ cache/
 artifacts/
 typechain/
 typechain-types/
+dist/
+build/
+
+# Next.js
+.next/
+next-env.d.ts
 
 # IDE files
 .vscode/
@@ -48,6 +54,14 @@ coverage/
 *.tmp
 *.temp
 
-# Scripts
+# Scripts (contains private keys and deployment logic)
 scripts/
 *.mjs
+
+# Deployment and testing files
+DEPLOYMENT_STATUS.md
+FINAL_STATUS.md
+authorize-*.mjs
+deploy-*.mjs
+test-*.mjs
+.next
