feat: Complete Solver + CallBreaker Cross-Chain Bridge
- Professional React/Next.js web interface
- Arbitrum → Base USDC bridge with instant liquidity
- 3-step flow: deposit → liquidity → claim
- Real-time transaction visualization
- Multi-wallet architecture (FROM/TO wallets)
- Corporate-grade UI with landscape layout
- Live balance updates and transaction tracking

Bridge Flow:
- Step 1: User deposits USDC to burner (Arbitrum)
- Step 2: Solver provides 99% liquidity (Base)
- Step 3: Solver claims from burner (Arbitrum)

Tech Stack: Next.js, React, TypeScript, Tailwind CSS, Viem, Framer Motion

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/stxn"]
-	path = lib/stxn
-	url = https://github.com/smart-transaction/stxn-smart-contracts-v2.git
+[submodule "lib/Solver + CallBreaker"]
+	path = lib/Solver + CallBreaker
+	url = https://github.com/smart-transaction/Solver + CallBreaker-smart-contracts-v2.git
