--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
-# Environment files (contains private keys!)
+# Solver + CallBreaker Cross-Chain Bridge
+# Environment files (CRITICAL: Contains private keys!)
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Build outputs
 out/
@@ -56,12 +62,52 @@ coverage/
 
 # Scripts with sensitive data (contains private keys and deployment logic)
 scripts/
-web-app/scripts/
-*.mjs
 
 # Deployment and testing files with sensitive data
 DEPLOYMENT_STATUS.md
 FINAL_STATUS.md
-authorize-*.mjs
-deploy-*.mjs
-test-*.mjs
+
+# Hardhat files
+cache/
+artifacts/
+
+# TypeScript
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
