--- a/solver-sdk/solver-config.json
+++ b/solver-sdk/solver-config.json
@@ -31,7 +31,7 @@
     "usdcBase": "0x036CbD53842c5426634e7929541eC2318f3dCF7e",
     "usdcArb": "0x75faf114eafb1BDbe2F0316DF893fd58CE46AA4d"
   },
-  "stxn": {
+  "Solver + CallBreaker": {
     "appId": "app.cross.fastfill.v1",
     "maxFeePerGas": "1000000000",
     "maxPriorityFeePerGas": "1000000000"
