feat: Enhanced cross-chain bridge with improved UI and real cross-chain transfers
- Added real cross-chain USDC transfers (Base → Arbitrum)
- Improved FlowDiagram with better colors and animations
- Enhanced BridgeInterface with cleaner messaging
- Updated .gitignore to exclude sensitive deployment files
- Added comprehensive bridge implementations
- Professional UI with gradient colors and live transaction tracking

--- a/.gitignore
+++ b/.gitignore
@@ -62,10 +62,27 @@ coverage/
 
 # Scripts with sensitive data (contains private keys and deployment logic)
 scripts/
+*.mjs
+check-and-fund-accounts.mjs
+execute-real-bridge-now.mjs
+test-*.mjs
+real-*.mjs
+complete-*.mjs
+fixed-*.mjs
+simple-*.mjs
+true-*.mjs
+escrow-*.mjs
+final-*.mjs
+advanced-*.mjs
+debug-*.mjs
+monitor-*.mjs
 
 # Deployment and testing files with sensitive data
 DEPLOYMENT_STATUS.md
 FINAL_STATUS.md
+
+# Solver SDK (contains sensitive deployment data)
+solver-sdk/
 
 # Hardhat files
 cache/
